Make "Prefer smoother animations" default latency policy

At the moment, the Aurorae decoration engine is inefficient. With the
medium latency policy, kwin misses a lot of vblanks when the decoration
texture atlas needs to be updated. To work around it, this patch
changes the default latency policy to "prefer smoother animations" to
ensure that there is as much as possible time to repaint the screen.

Once Aurorae is optimized, we can change the default latency policy back
to "medium."

BUG: 431415